# chat-service

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: .gitmessage.txt
src/common/: serializers.py
src/config/: settings.py  urls.py
src/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_userprofile.py
src/users/tests/: test_views_signout.py  test_views_signup.py  test_views_tokens.py  test_views_userdelete.py
