[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "chat-service"
authors = ["chestnut90 <cowzon90@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
