[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "chat-service"
authors = ["chestnut90 <cowzon90@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.black]
max-line-length = 120
force-exclude = 'migrations'

[tool.flake8]
max-line-length = 120
extend-ignore = """
    E203
    """
exclude = """
    .git,
    __pycache__,
    */migrations/*
    """

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
